--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         </div>
 
                                         <div class="col-lg-3 col-12 ms-auto">
-                                            <button type="submit" class="form-control">Send</button>
+                                            <button type="submit" class="form-control" onClick="sendEmail()">Send</button>
                                         </div>
 
                                     </div>
@@ -838,6 +838,26 @@ https://templatemo.com/tm-578-first-portfolio
         </footer> -->
 
         <!-- JAVASCRIPT FILES -->
+         <script src=
+    "https://smtpjs.com/v3/smtp.js">
+  </script>
+  
+  <script type="text/javascript">
+    function sendEmail() {
+      Email.send({
+        Host: "smtp.gmail.com",
+        Username: "vimalsharma0753@gmail.com",
+        Password: "qudtrgimbznxcuss",
+        To: 'vimalsharma0753@gmail.com',
+        From: "vimalsharma0753@gmail.com",
+        Subject: "Sending Email using javascript",
+        Body: "Well that was easy!!",
+      })
+        .then(function (message) {
+          alert("mail sent successfully")
+        });
+    }
+  </script>
         <script src="js/jquery.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery.sticky.js"></script>
