--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@ https://templatemo.com/tm-578-first-portfolio
         <div class="input-container ic2">
           <input id="email" class="input" type="phone" placeholder="Phone number " /></div>
           
-        <button type="text" class="submit">submit</button>
+        <button type="text" class="submit"  onClick="sendEmail()">submit</button>
       </div>
     </div>
 
